--- a/src/stylus/base/_general.styl
+++ b/src/stylus/base/_general.styl
@@ -3,7 +3,15 @@
   padding: 0
   box-sizing: border-box
 
-
+:root
+  scroll-behavior: smooth
 body
   font-family: 'Open Sans', sans-serif
   background-color: #666
+
+.contenedor
+  width: 90%
+  max-width: 1200px
+  overflow: hidden
+  margin: auto
+  padding: 60px 0px
