--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,231 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  scroll-behavior: smooth;
+}
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #666;
+}
+.contenedor {
+  width: 90%;
+  max-width: 1200px;
+  overflow: hidden;
+  margin: auto;
+  padding: 60px 0px;
+}
+header {
+  height: 100vh;
+  background-image: linear-gradient(to top, rgba(161,140,209,0.4) 0%, rgba(251,194,235,0.4) 100%), url("../assets/img/hero-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+header .hamburguer {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  background: #fff;
+}
+header .menu-navegacion {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 30vw;
+  height: 100%;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 0 0 6px rgba(0,0,0,0.5);
+  transition: transform 0.3s ease-in-out;
+  transform: translate(110%);
+}
+header .menu-navegacion a {
+  color: #fff;
+  text-decoration: none;
+}
+header .menu-navegacion .spread {
+  transform: translate(0);
+}
+header .head {
+  padding: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #fff;
+}
+header .head .titulo {
+  font-size: 60px;
+  margin-bottom: 15px;
+}
+header .head .copy {
+  font-weight: 300;
+  font-size: 25px;
+}
+.subtitulo {
+  text-align: center;
+  font-weight: 300;
+  color: #9f9ad0;
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+.contenedor-servicio {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.contenedor-servicio img {
+  width: 40%;
+}
+.checklist-servicio {
+  width: 45%;
+}
+.service {
+  margin-bottom: 20px;
+}
+.n-service {
+  margin-bottom: 7px;
+  color: #9f9ad0;
+}
+.number {
+  display: inline-block;
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  font-weight: 700;
+  line-height: 30px;
+  margin-right: 5px;
+}
+.gallery {
+  background: #f2f2f2;
+}
+.gallery .contenedor-galeria {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.gallery .contenedor-galeria .img-galeria {
+  width: 30%;
+  display: block;
+  margin-bottom: 15px;
+  box-shadow: 0 0 6px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+.showImage {
+  transform: scale(1);
+}
+.show {
+  transform: translate(0);
+}
+.imagen-light {
+  position: fixed;
+  background: rgba(0,0,0,0.6);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(100%);
+  transition: transform 0.2s ease-in-out;
+}
+.imagen-light .agregar-imagen {
+  width: 30%;
+  border-radius: 10px;
+  transition: transform 0.3s 0.2s;
+  transform: scale(0);
+}
+.imagen-light .close {
+  position: absolute;
+  top: 45px;
+  right: 805px;
+  width: 40px;
+  cursor: pointer;
+}
+.experts {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.experts .cont-expert {
+  width: 30%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.experts .cont-expert img {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+.experts .n-expert {
+  display: inline-block;
+  margin-top: 20px;
+  width: 100%;
+  font-weight: 400;
+}
+footer {
+  background: #9f9ad0;
+  padding-bottom: 0.1px /* sin esta linea ocurre el colapso de margenes con .line  */;
+}
+footer .footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+footer .contact-us {
+  width: 60%;
+  color: #fff;
+}
+footer .contact-us .brand {
+  font-weight: 500;
+  font-size: 40px;
+}
+footer .contact-us .brand +p {
+  font-weight: 500;
+}
+footer .social-media {
+  width: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
+footer .social-media--icon {
+  display: inline-block;
+  margin-left: 20px;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  text-align: center;
+  color: #fff;
+}
+footer .social-media--icon i {
+  font-size: 30px;
+  line-height: 60px;
+}
+footer .social-media--icon:hover {
+  background: #fff;
+  color: #764ba2;
+}
+.line {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 2px;
+  background: #fff;
+  margin-bottom: 60px;
 }
