--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -1,3 +1,8 @@
 @import './lib/_vars.styl';
 @import './base/_general.styl';
 @import './lib/_mixins.styl';
+@import './components/header.styl'
+@import './components/services.styl'
+@import './components/gallery.styl'
+@import './components/expert.styl'
+@import './components/footer.styl'
