--- a/src/stylus/components/header.styl
+++ b/src/stylus/components/header.styl
@@ -29,7 +29,8 @@ header
       text-decoration: none
     .spread
       transform: translate(0)
-  .head 
+  .head
+    text-align: center
     padding: 0
     height: 100%
     display: flex
