--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -6,3 +6,4 @@
 @import './components/gallery.styl'
 @import './components/expert.styl'
 @import './components/footer.styl'
+@import './lib/mediaquerys.styl'
