--- a/src/stylus/components/gallery.styl
+++ b/src/stylus/components/gallery.styl
@@ -10,6 +10,7 @@
       margin-bottom: 15px
       box-shadow: 0 0 6px rgba(0,0,0, .5)
       cursor: pointer
+      object-fit: cover
 
 .showImage
   transform: scale(1)
@@ -34,9 +35,10 @@
     border-radius: 10px
     transition: transform .3s .2s
     transform: scale(0)
+    object-fit: cover
   .close
     position: absolute
-    top: 45px
-    right: 805px
+    top: 15px
+    right: 15px
     width: 40px
     cursor: pointer
