--- a/src/stylus/components/header.styl
+++ b/src/stylus/components/header.styl
@@ -7,9 +7,11 @@ header
   background-position: center
   .hamburguer
     position: fixed
+    z-index: 10
     top: 30px
     right 30px
     background: colorLight
+    width: 40px
   .menu-navegacion
     position: fixed
     top: 0
@@ -27,8 +29,8 @@ header
     a
       color: colorLight
       text-decoration: none
-    .spread
-      transform: translate(0)
+  .spread
+    transform: translate(0)
   .head
     text-align: center
     padding: 0
